[gd_scene load_steps=8 format=3 uid="uid://bp6cxm3xby8l1"]

[ext_resource type="Script" path="res://Main.gd" id="1_igdky"]
[ext_resource type="PackedScene" uid="uid://bu31xp1i0213l" path="res://player.tscn" id="2_34lnu"]
[ext_resource type="PackedScene" uid="uid://w30mva1jr2ld" path="res://mob.tscn" id="2_frne3"]
[ext_resource type="PackedScene" uid="uid://b54q2coris3pt" path="res://HUD.tscn" id="4_gw62n"]
[ext_resource type="AudioStream" uid="uid://jl04qrja8nwu" path="res://art/House In a Forest Loop.ogg" id="5_v4r02"]
[ext_resource type="AudioStream" uid="uid://0fw4qdoit1fp" path="res://art/gameover.wav" id="6_f87hc"]

[sub_resource type="Curve2D" id="Curve2D_ct2gw"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 480, 0, 0, 0, 0, 0, 480, 720, 0, 0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Main" type="Node"]
script = ExtResource("1_igdky")
mob_scene = ExtResource("2_frne3")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.568627, 0.745098, 0.941176, 1)

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Player" parent="." instance=ExtResource("2_34lnu")]

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_ct2gw")

[node name="MobSpawnLocation" type="PathFollow2D" parent="MobPath"]

[node name="HUD" parent="." instance=ExtResource("4_gw62n")]

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_v4r02")

[node name="DeathMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_f87hc")

[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="start_game" from="HUD" to="." method="_on_hud_start_game"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
